Updated laravel.mix to minify images.

--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
 		"babel-eslint": "^10.1.0",
 		"browser-sync": "^2.27.6",
 		"browser-sync-webpack-plugin": "^2.3.0",
+		"copy-webpack-plugin": "^10.0.0",
 		"eslint": "^8.1.0",
 		"eslint-plugin-import": "^2.25.2",
+		"imagemin-mozjpeg": "^9.0.0",
+		"imagemin-webpack-plugin": "^2.4.2",
 		"jquery": "^3.6.0",
 		"laravel-mix": "^6.0.34",
 		"postcss": "^8.3.11",
